--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
 </head>
 
 <body>
@@ -44,14 +43,6 @@
 
             </form>
 
-
-            <!-- <form action="" class="form-pesquisa">
-
-                <input type="search" name="" placeholder="Pesquisar" id="caixa-pesquisa">
-
-                <label for="caixa-pesquisa" class="fa-solid fa-magnifying-glass"></label>
-
-            </form> -->
 
             <div class="icons">
 
@@ -482,7 +473,7 @@
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -492,14 +483,14 @@
                     <div class="conteudo">
                         <h3>Desodorante 1</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -509,14 +500,14 @@
                     <div class="conteudo">
                         <h3>Desodorante 2</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -526,14 +517,14 @@
                     <div class="conteudo">
                         <h3>Desodorante 3</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -543,14 +534,14 @@
                     <div class="conteudo">
                         <h3>Desodorante 4</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -560,14 +551,14 @@
                     <div class="conteudo">
                         <h3>Fralda 1</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -577,14 +568,14 @@
                     <div class="conteudo">
                         <h3>Fralda 2</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -594,14 +585,14 @@
                     <div class="conteudo">
                         <h3>Fralda 3</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#novidades" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -611,7 +602,7 @@
                     <div class="conteudo">
                         <h3>Fralda 4</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#novidades" class="btn">Comprar</a>
                     </div>
                 </div>
 
@@ -633,48 +624,48 @@
 
         <div class="box-container">
 
-            <div class="box">
+            <div class="box" id="local">
                 <h3>Onde nós estamos</h3>
-                <a href="#"> <i class="fa-solid fa-location-dot"></i>São Gonçalo</a>
-                <a href="#"> <i class="fa-solid fa-location-dot"></i>Niterói</a>
-                <a href="#"> <i class="fa-solid fa-location-dot"></i>Rio de Janeiro</a>
+                <a href="#local"> <i class="fa-solid fa-location-dot"></i>São Gonçalo</a>
+                <a href="#local"> <i class="fa-solid fa-location-dot"></i>Niterói</a>
+                <a href="#local"> <i class="fa-solid fa-location-dot"></i>Rio de Janeiro</a>
             </div>
 
-            <div class="box">
+            <div class="box" id="setas">
                 <h3>Minha conta</h3>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Minha conta</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Meus pedidos</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Troca e devolução</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Politica de privacidade</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Formas de pagamento</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Cancelamento de compra</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Minha conta</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Meus pedidos</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Troca e devolução</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Politica de privacidade</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Formas de pagamento</a>
+                <a href="#setas"> <i class='bx bx-right-arrow-alt'></i>Cancelamento de compra</a>
             </div>
 
-            <div class="box-pagamento">
+            <div class="box-pagamento" id="paga">
                 <h3>Formas de pagamento</h3>
 
-                <a href="#"><i class="fa-brands fa-cc-visa" id="visa"></i></a>
-                <a href="#"><i class="fa-brands fa-cc-mastercard" id="master"></i></a>
-                <a href="#"><i class="fa-brands fa-pix" id="pix"></i></a>
-                <a href="#"><i class="fa-brands fa-cc-paypal" id="paypal"></i></a>
+                <a href="#paga"><i class="fa-brands fa-cc-visa" id="visa"></i></a>
+                <a href="#paga"><i class="fa-brands fa-cc-mastercard" id="master"></i></a>
+                <a href="#paga"><i class="fa-brands fa-pix" id="pix"></i></a>
+                <a href="#paga"><i class="fa-brands fa-cc-paypal" id="paypal"></i></a>
 
             </div>
 
-            <div class="box">
+            <div class="box" id="faleconosco">
                 <h3>Fale conosco</h3>
-                <a href="#"> <i class='bx bxs-phone'></i> (21)xxxx-xxxx</i></a>
-                <a href="#"> <i class="fa-brands fa-whatsapp"></i> (21)xxxxx-xxxx</i></a>
-                <a href="#"> <i class='bx bxs-envelope'></i> sac-farmacia@gmail.com</a>
+                <a href="#faleconosco"> <i class='bx bxs-phone'></i> (21)xxxx-xxxx</i></a>
+                <a href="#faleconosco"> <i class="fa-brands fa-whatsapp"></i> (21)xxxxx-xxxx</i></a>
+                <a href="#faleconosco"> <i class='bx bxs-envelope'></i> sac-farmacia@gmail.com</a>
                 <img src="img/worldmap.png" class="map" alt="">
             </div>
 
         </div>
 
-        <div class="redes-social">
+        <div class="redes-social" id="socialmedia">
             <h3>Redes sociais</h3>
-            <a href="#" class="bx bxl-facebook"></a>
-            <a href="#" class="bx bxl-twitter"></a>
-            <a href="#" class="bx bxl-instagram-alt"></a>
+            <a href="#socialmedia" class="bx bxl-facebook"></a>
+            <a href="#socialmedia" class="bx bxl-twitter"></a>
+            <a href="#socialmedia" class="bx bxl-instagram-alt"></a>
         </div>
 
         <div class="creditos">Copyright<i class='bx bx-copyright'></i> 2022 <span>Rogerio Pessanha</span></div>
