--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         <a href="#produtos" class="bx bxs-capsule"></a>
         <a href="#ofertas" class="bx bxs-offer"></a>
         <a href="#novidades" class="fa-solid fa-star"></a>
-        <!-- <a href="#ofertas" class="bx bxs-purchase-tag"></a> -->
     </nav>
     <!-- FIM BARRA-NAV -->
 
@@ -181,7 +180,7 @@
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#produtos" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -191,14 +190,14 @@
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#produtos" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#produtos" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -208,14 +207,14 @@
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#produtos" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#produtos" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -225,14 +224,14 @@
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#produtos" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#produtos" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -242,14 +241,14 @@
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#produtos" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#produtos" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -259,7 +258,7 @@
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
                         <div class="preco">R$ 20,00</div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#produtos" class="btn">Comprar</a>
                     </div>
                 </div>
 
@@ -299,7 +298,7 @@
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#ofertas" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -310,14 +309,14 @@
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
                         <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#ofertas" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#ofertas" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -328,14 +327,14 @@
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
                         <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#ofertas" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#ofertas" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -346,14 +345,14 @@
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
                         <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#ofertas" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#ofertas" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -364,14 +363,14 @@
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
                         <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#ofertas" class="btn">Comprar</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
 
                     <div class="icons">
-                        <a href="#" class="fa-regular fa-heart"></a>
+                        <a href="#ofertas" class="fa-regular fa-heart"></a>
                     </div>
 
                     <div class="image">
@@ -382,7 +381,7 @@
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
                         <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="#ofertas" class="btn">Comprar</a>
                     </div>
                 </div>
 
