--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Projeto Farmacia</title>
 
     <!-- CSS -->
@@ -24,16 +25,13 @@
 </head>
 
 <body>
-    <!-- INICIO HEADER SECTION -->
 
-
-
+    <!-- COMEÇO HEADER SECTION -->
     <header class="topo" id="inicio">
 
         <div class="topo-1">
 
             <a href="#" class="logo"><i class='bx bx-plus-medical'></i> Farmacia </a>
-
 
             <form action="" class="form-pesquisa">
 
@@ -67,20 +65,20 @@
         </div>
 
     </header>
+    <!-- FINAL HEADER SECTION -->
 
-    <!-- FIM HEADER SECTION -->
 
-    <!-- INICIO MENU-NAV -->
+    <!-- COMEÇO MENU-NAV -->
     <nav class="barra-menu">
         <a href="#inicio" class="bx bxs-home"></a>
         <a href="#produtos" class="bx bxs-capsule"></a>
         <a href="#ofertas" class="bx bxs-offer"></a>
         <a href="#novidades" class="fa-solid fa-star"></a>
     </nav>
-    <!-- FIM BARRA-NAV -->
+    <!-- FINAL BARRA-NAV -->
 
 
-    <!-- INICIO LOGIN FORM -->
+    <!-- COMEÇO LOGIN FORM -->
     <div class="login-form-container">
 
         <div id="close-login-btn" class="bx bx-x-circle"> </div>
@@ -104,8 +102,7 @@
             <p>não tem uma conta? <a href="#">Cadastre-se</a></p>
         </form>
     </div>
-    <!-- FIM LOGIN FORM -->
-
+    <!-- FINAL LOGIN FORM -->
 
 
     <!-- COMEÇO SECTION INICIO -->
@@ -113,14 +110,11 @@
 
         <div class="swiper banner-slider">
 
-
-
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
                 <div class="swiper-slide"><img src="imagens/banner/banner02.webp" alt=""></div>
                 <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
                 <div class="swiper-slide"><img src="imagens/banner/banner06.webp" alt=""></div>
-
             </div>
 
         </div>
@@ -129,7 +123,6 @@
 
 
     <!-- COMEÇO SECTION ICONS -->
-
     <section class="icons-container">
 
         <div class="icons">
@@ -164,12 +157,10 @@
             </div>
         </div>
     </section>
-
     <!-- FINAL SECTION ICONS -->
 
 
     <!-- COMEÇO SECTION PRODUTOS -->
-
     <section class="produtos" id="produtos">
         <h1 class="titulo"><span>Mais vendidos</span></h1>
 
@@ -272,7 +263,6 @@
 
 
     <!-- COMEÇO SECTION NEWS -->
-
     <section class="news">
         <form action="">
             <h3>Receba nossas novidades e promoções</h3>
@@ -280,14 +270,10 @@
             <input type="submit" value="Entrar" class="btn">
         </form>
     </section>
-
-
     <!-- FINAL SECTION NEWS -->
 
 
-
-    <!-- INICIO SECTION PROMOÇÃO -->
-
+    <!-- COMEÇO SECTION PROMOÇÃO -->
     <section class="ofertas" id="ofertas">
         <h1 class="titulo"><span>Promoção</span></h1>
 
@@ -395,10 +381,7 @@
     <!-- FINAL SECTION PROMOÇÃO -->
 
 
-
     <!-- COMEÇO SECTION MARCAS -->
-
-
     <section class="marcas">
         <h1 class="titulo"><span>as melhores marcas</span></h1>
 
@@ -460,8 +443,8 @@
     </section>
     <!-- FINAL SECTION MARCAS -->
 
-    <!-- COMEÇO SECTION NOVIDADES -->
 
+    <!-- COMEÇO SECTION NOVIDADES -->
     <section class="novidades" id="novidades">
         <h1 class="titulo"><span>Novidades</span></h1>
 
@@ -616,9 +599,7 @@
     <!-- FINAL SECTION NOVIDADES -->
 
 
-
     <!-- COMEÇO SECTION FOOTER -->
-
     <section class="footer">
 
         <div class="box-container">
@@ -669,17 +650,14 @@
 
         <div class="creditos">Copyright<i class='bx bx-copyright'></i> 2022 <span>Rogerio Pessanha</span></div>
     </section>
-
-
     <!-- FINAL SECTION FOOTER -->
 
 
-    <!--INICIO CARREGAMENTO DA PÁGINA -->
-
+    <!--COMEÇO CARREGAMENTO DA PÁGINA -->
     <div class="loader-container">
         <img src="imagens/gif-logo-fundo/carregamento.gif" alt="">
     </div>
-    <!--FIM CARREGAMENTO DA PÁGINA -->
+    <!--FINAL CARREGAMENTO DA PÁGINA -->
 
     
     <!-- SWIPER JS -->
@@ -688,7 +666,6 @@
 
     <!-- JS -->
     <script src="js/script.js"></script>
-
 
 </body>
 
