--- a/index.html
+++ b/index.html
@@ -673,4 +673,4 @@
 
 
 
-<img src="imagens/readme-info/responsivo 320px.gif" alt="">
+<img src="width= imagens/readme-info/responsivo 320px.gif" alt="">
