--- a/index.html
+++ b/index.html
@@ -658,9 +658,11 @@
     </div>
     <!--FINAL CARREGAMENTO DA PÁGINA -->
 
-    
+    <div class="whats">
+        <img src="imagens/gif-logo-fundo/whatsapp-logo-8.png" alt="">
+    </div>
 
-    
+
     <!-- SWIPER JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
