--- a/index.html
+++ b/index.html
@@ -659,7 +659,9 @@
     <!--FINAL CARREGAMENTO DA PÁGINA -->
 
     <div class="whats">
+        <a href="https://wa.me/55" target="_blank">
         <img src="imagens/gif-logo-fundo/whatsapp-logo-8.png" alt="">
+    </a>
     </div>
 
 
