--- a/index.html
+++ b/index.html
@@ -634,7 +634,6 @@
             <div class="box" id="faleconosco">
                 <h3>Fale conosco</h3>
                 <a href="#faleconosco"> <i class='bx bxs-phone'></i> (21)xxxx-xxxx</i></a>
-                <a href="#faleconosco"> <i class="fa-brands fa-whatsapp"></i> (21)xxxxx-xxxx</i></a>
                 <a href="#faleconosco"> <i class='bx bxs-envelope'></i> sac-farmacia@gmail.com</a>
             </div>
 
@@ -659,7 +658,7 @@
     <!--FINAL CARREGAMENTO DA PÁGINA -->
 
     <div class="whats">
-        <a href="https://wa.me/55?text=Olá, gostaria de fazer um pedido" target="_blank">
+        <a href="https://wa.me/55?text=Olá, eu gostaria de fazer um pedido." target="_blank">
         <img src="imagens/gif-logo-fundo/whatsapp-logo-8.png" alt="">
     </a>
     </div>
