--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <!-- COMEÇO SECTION MARCAS -->
     <section class="marcas">
-        <h1 class="titulo"><span>as melhores marcas</span></h1>
+        <h1 class="titulo"><span>As melhores marcas</span></h1>
 
         <div class="swiper marcas-slider">
 
