--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             <a href="#socialmedia" class="bx bxl-instagram-alt"></a>
         </div>
 
-        <div class="creditos">Copyright<i class='bx bx-copyright'></i> 2022 <span>Rogerio Pessanha</span></div>
+        <div class="creditos"><i class='bx bx-copyright'></i> 2022 desenvolvido por <span>Rogerio Pessanha</span></div>
     </section>
     <!-- FINAL SECTION FOOTER -->
 
